...
    let foreground: Color
    let background: Color
}

enum MTColor: String, Codable, CaseIterable, Identifiable {
    case leather
    case strawberry
    case lilac
    case bluejeans
    case conifer
    case duck
    case peach
    case aluminium
...
                                    .font(.title)
                                Text("Smaller text")
                                Text(color.rawValue.capitalized)
                                    .bold()

                                Button { } label: {
                                    Label("Add a new Team", systemImage: "plus")
                                        .frame(maxWidth: .infinity, minHeight: 30)
                                }
                                .buttonStyle(DashedButtonStyle(color: color))
                                .padding([.bottom, .horizontal])
                            }
                            .frame(width: 180, height: 200)
...
